fix: Increase text contrast
I didn't see this issue before because of Chrome's automatic dark mode)

--- a/styles.css
+++ b/styles.css
@@ -17,4 +17,5 @@ body {
   outline: none;
   padding: 1rem;
   backdrop-filter: blur(2rem);
+  color: #fff;
 }
